myteo/test/parser/invalid_token.exp
Error: Unexpected token `@`
test/parser/invalid_token.myte:3:0
 3 | @
   | ^